feat(data-graph): 新增图数据库模块，抽象层零驱动依赖 + Neo4j 实现
  - 新增 fun-framework-data-graph-base：图注解体系、驱动无关中间表示、
    可插拔映射引擎、模板抽象、Cypher 构建器（图元素名白名单校验 + 值参数绑定）
  - 新增 fun-framework-data-graph-neo4j-starter：基于 neo4j-java-driver 6.2.1，
    以 elementId 为标识，多数据源惰性创建并在容器销毁时释放驱动
  - IGraphTemplate 继承框架统一 ITemplate<String>，insert 回填图库标识，
    merge 按业务主键 MERGE；错误码段位 123**
  - 父 POM 注册模块与依赖管理；同步各级 README 与 java脚手架.md